--- a/modules/matterhorn-videoeditor-api/pom.xml
+++ b/modules/matterhorn-videoeditor-api/pom.xml
@@ -43,7 +43,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>matterhorn-smil</artifactId>
-            <version>1.4-SNAPSHOT</version>
+            <version>${project.version}</version>
             <type>jar</type>
         </dependency>
         <dependency>
