--- a/modules/matterhorn-videoeditor-impl/pom.xml
+++ b/modules/matterhorn-videoeditor-impl/pom.xml
@@ -77,7 +77,7 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>matterhorn-videoeditor-api</artifactId>
-      <version>1.4-SNAPSHOT</version>
+      <version>${project.version}</version>
       <type>jar</type>
     </dependency>
     <dependency>
