--- a/modules/matterhorn-videoeditor-api/pom.xml
+++ b/modules/matterhorn-videoeditor-api/pom.xml
@@ -10,6 +10,7 @@
       <groupId>org.opencastproject</groupId>
       <artifactId>base</artifactId>
       <version>1.4-rc3</version>
+      <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <properties>
