--- a/modules/matterhorn-videoeditor-impl/pom.xml
+++ b/modules/matterhorn-videoeditor-impl/pom.xml
@@ -11,6 +11,7 @@
     <groupId>org.opencastproject</groupId>
     <artifactId>base</artifactId>
     <version>1.4-rc3</version>
+    <relativePath>../../pom.xml</relativePath>
   </parent>
 
   <properties>
