--- a/modules/matterhorn-sidebyside-impl/pom.xml
+++ b/modules/matterhorn-sidebyside-impl/pom.xml
@@ -22,7 +22,9 @@
             <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
             <Private-Package>org.gstreamer</Private-Package>
             <Import-Package>
-              org.opencastproject.sidebyside;version=${project.version}
+              org.opencastproject.sidebyside.api.*;version=${project.version},
+              org.opencastproject.util.*;version=${project.version},
+              *;resolution:=optional
             </Import-Package>
             <Export-Package>
               org.opencastproject.sidebyside.impl.*;version=${project.version},
@@ -52,6 +54,21 @@
       <groupId>${project.groupId}</groupId>
       <artifactId>matterhorn-common</artifactId>
       <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opencastproject</groupId>
+      <artifactId>matterhorn-workspace-api</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.googlecode.gstreamer-java</groupId>
+      <artifactId>gstreamer-java</artifactId>
+      <version>1.5</version>
+    </dependency>
+    <dependency>
+      <groupId>net.java.dev.jna</groupId>
+      <artifactId>jna</artifactId>
+      <version>3.2.4</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
