--- a/etc/encoding/matterhorn-movies.properties
+++ b/etc/encoding/matterhorn-movies.properties
@@ -35,17 +35,17 @@
 profile.av.work.name = Re-encode audiovisual track
 profile.av.work.input = stream
 profile.av.work.output = audiovisual
-#profile.av.work.suffix = -work.#{in.video.suffix}
-#profile.av.work.ffmpeg.command = -strict unofficial -i #{in.video.path} -sameq -shortest -acodec copy -vcodec copy #{out.dir}/#{out.name}#{out.suffix}
-profile.av.work.suffix = -work.mp4
-profile.av.work.ffmpeg.command = -strict unofficial -i #{in.video.path} -sameq -shortest #{out.dir}/#{out.name}#{out.suffix}
+profile.av.work.suffix = -work.#{in.video.suffix}
+profile.av.work.ffmpeg.command = -strict unofficial -i #{in.video.path} -sameq -shortest -acodec copy -vcodec copy #{out.dir}/#{out.name}#{out.suffix}
+#profile.av.work.suffix = -work.mp4
+#profile.av.work.ffmpeg.command = -strict unofficial -i #{in.video.path} -sameq -shortest #{out.dir}/#{out.name}#{out.suffix}
 
 # Mux one audio and one video stream
 profile.mux-av.work.name = mux audio and video
 profile.mux-av.work.input = stream
 profile.mux-av.work.output = visual
-#profile.mux-av.work.suffix = -work.#{in.video.suffix}
-profile.mux-av.work.suffix = -work.mp4
+profile.mux-av.work.suffix = -work.#{in.video.suffix}
+#profile.mux-av.work.suffix = -work.mp4
 profile.mux-av.work.ffmpeg.command = -i #{in.audio.path} -i #{in.video.path} -sameq -shortest -strict unofficial #{out.dir}/#{out.name}#{out.suffix}
 
 # Trim a stream
