MH-9365 encoding profile work version

--- a/etc/encoding/matterhorn-movies.properties
+++ b/etc/encoding/matterhorn-movies.properties
@@ -33,9 +33,8 @@ profile.av.work.name = Re-encode audiovisual track
 profile.av.work.input = stream
 profile.av.work.output = audiovisual
 #profile.av.work.suffix = -work.#{in.video.suffix}
-#profile.av.work.ffmpeg.command = -strict unofficial -i #{in.video.path} -sameq -shortest -acodec copy -vcodec copy #{out.dir}/#{out.name}#{out.suffix}
 profile.av.work.suffix = -work.mp4
-profile.av.work.ffmpeg.command = -strict unofficial -i #{in.video.path} -sameq -shortest -vcodec mpeg4 -acodec libfaac #{out.dir}/#{out.name}#{out.suffix}
+profile.av.work.ffmpeg.command = -strict unofficial -i #{in.video.path} -sameq -shortest -vcodec mpeg4 #{out.dir}/#{out.name}#{out.suffix}
 
 # Mux one audio and one video stream
 profile.mux-av.work.name = mux audio and video
@@ -43,7 +42,7 @@ profile.mux-av.work.input = stream
 profile.mux-av.work.output = visual
 #profile.mux-av.work.suffix = -work.#{in.video.suffix}
 profile.mux-av.work.suffix = -work.mp4
-profile.mux-av.work.ffmpeg.command = -i #{in.audio.path} -i #{in.video.path} -sameq -shortest -strict unofficial -vcodec mpeg4 -acodec libfaac #{out.dir}/#{out.name}#{out.suffix}
+profile.mux-av.work.ffmpeg.command = -i #{in.audio.path} -i #{in.video.path} -sameq -shortest -strict unofficial -vcodec mpeg4 #{out.dir}/#{out.name}#{out.suffix}
 
 # Trim a stream
 profile.trim.work.name = trim track
