MH-9178 silencedetection properties are not in milliseconds, property for minimum segment length

--- a/etc/services/org.opencastproject.videoeditor.silencedetection.impl.SilenceDetectionServiceImpl.properties
+++ b/etc/services/org.opencastproject.videoeditor.silencedetection.impl.SilenceDetectionServiceImpl.properties
@@ -1,9 +1,12 @@
 
-# Timespan in seconds before silece cut begin.
-silence.pre.length = 2
+# Silence length in milliseconds befor cut segment.
+silence.pre.length = 2000
 
-# Minimum length in seconds to accept silence sequence.
-silence.min.length = 10
-
-# Silence threshold in decibel (e.g. -50 for loud classrooms, -35 for very silent indoor location).
+# Silence threshold in decibel (e.g. -50 for loud classrooms, -35 for silent indoor location).
 silence.threshold.db = -40
+
+# Minimum length in milliseconds to accept silence sequence.
+silence.min.length = 10000
+
+# Minimum (voice) segment length in milliseconds.
+voice.min.length = 60000
