MH-9589 refactored Videoeditor and Conductor Service to use new Smil API from MH-9575

--- a/modules/matterhorn-conductor/pom.xml
+++ b/modules/matterhorn-conductor/pom.xml
@@ -88,7 +88,7 @@
     </dependency>
     <dependency>
       <groupId>org.opencastproject</groupId>
-      <artifactId>matterhorn-smil</artifactId>
+      <artifactId>matterhorn-smil-api</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
