--- a/modules/matterhorn-videoeditor-api/pom.xml
+++ b/modules/matterhorn-videoeditor-api/pom.xml
@@ -43,7 +43,7 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>matterhorn-smil</artifactId>
+            <artifactId>matterhorn-smil-api</artifactId>
             <version>${project.version}</version>
             <type>jar</type>
         </dependency>
